is suspected.

29/10/2008 - 165500 Mark Ellis
------------------------------
Minor update for change in pyrapi2.RAPIError

18/12/2008 - 172600 Mark Ellis
------------------------------
Make -c command line option work more as expected, not silently adding .synce.
Report useful errors from problems with config files.

10/01/2009 - 192200 Mark Ellis
------------------------------
0.13 release


06/02/2009 - 162700 Mark Ellis
------------------------------
Add namespace identifier to Sensitivity in event-from-airsync.xsl, this item
was being ignored.

20/03/2009 - 162700 Mark Ellis
------------------------------
Changed longname of plugin to clarify this is for Windows Mobile 5 and later.

26/03/2009 - 191400 Mark Ellis
------------------------------
Pass None as device name argument to new RAPISession constructor.

03/04/2009 - 123400 Mark Ellis
------------------------------
For device connected through hal, use iface_address property to create RRASession
only listening on our interface.

09/04/2009 - 202900 John Carr
------------------------------
Commit patch from Pawel Kot (via AdamW). Fixes some issues when syncing from WM to
places other than Evolution (e.g. nokia <-> wm). This has been in Mandriva for a while
without problems.

10/04/2009 - 150600 Mark Ellis
------------------------------
Get interface ip for RRASession from RAPISession.

14/04/2009 - 122700 Mark Ellis
------------------------------
For changes in pyrra, mostly throwing exceptions on errors.

10/07/2009 - 121100 Mark Ellis
------------------------------
Convert tests to python unittest framework, many thanks to Aurelien Bompard for this.
Tests can now be run using python-nose, with "nosetests -v tests".

16/07/2009 - 214900 Mark Ellis
------------------------------
0.14 release

02/09/2009 - Mark Ellis
-----------------------
Gracefully pass over IPv6 addresses in dtptserver, looking for an IPv4 address, many
thanks to Aurelien Bompard.
